--- a/sass/layout/_section-2.scss
+++ b/sass/layout/_section-2.scss
@@ -1,5 +1,4 @@
 .section-2 {
-  //min-height: 172rem;
   background: $cod-grey;
   color: white;
   text-align: center;
@@ -8,31 +7,36 @@
 
   @include media-md {
     min-height: 89.1rem;
-  }
-
-  @include media-lg {
-    min-height: 76.1rem;
-    margin-top: -8rem;
     padding-top: 10rem;
   }
 
+  @include media-lg {
+    min-height: 56.1rem;
+    margin-top: -6rem;
+  }
+
   .inner {
-    @include flex(column, center);
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    justify-content: center;
 
     @include media-lg {
-      flex-direction: row;
       justify-content: space-between;
       align-items: start;
     }
   }
 
   &__header {
-    @include media-lg {
+    @include media-md {
       max-width: 44.2rem;
+    }
+    @include media-lg {
       text-align: left;
+      flex-basis: 50%;
     }
 
-    .title-2 {      
+    .title-2 {
       padding-top: 4rem;
       padding-bottom: 1.6rem;
     }
@@ -44,6 +48,10 @@
 
   &__container {
     @include flex(column, center);
+
+    @include media-lg {
+      flex-basis: 50%;
+    }
 
     .food {
       @include media-md {
@@ -73,7 +81,7 @@
         margin-left: 3rem;
       }
 
-      h3 {
+      .title-3 {
         font-size: 1.8rem;
         font-weight: bold;
         line-height: 2.8rem;
